Alpha 0.1.8.54
- Register missing commands. Thanks, oldmanbash, for the bug report!

Alpha 0.1.8.53
- Add support for Minecraft 1.21.
- Fix negative `maxAutoCloseTimer` values not counting as unlimited. Thanks, King, for the bug report!

Alpha 0.1.8.52
- Fixed accidentally removing support for 1.20.4. Whoops! Thanks, TylorTurner, for the bug report!

Alpha 0.1.8.51
- Added support for Paper 1.20.6.
- Updated resource pack list.
- Fix support for < MC 1.14.

Alpha 0.1.8.50
- Added support for MC 1.20.5.
- Added a config option `setCustomName` to control whether animated blocks have a custom name. Default: false.
- Switched to PersistentDataContainer for animated entity identification instead of custom names.
- Added the method `boolean BigDoors#isBigDoorsEntity(Entity)` so other plugins can easily check if a specific entity is managed by this plugin.

Alpha 0.1.8.49
- Added support for MC 1.20.4.
- Updated database to v9.
- Added bypassProtections property to doors. Doors with this property set to true will ignore all protection plugins (e.g. WorldGuard, PlotSquared, etc).
- Added the command `/setBypassProtections <doorName || doorUID> <true || false>` to set the `bypassProtections` property of a door. Permission node: `bigdoors.admin.setbypassprotections`.
- Added a new GUI button to set the `bypassProtections` property of a door. This button is only visible if you have the `bigdoors.admin.setbypassprotections` permission node.

Alpha 0.1.8.48
- Add support for MC 1.20.2.
- Fixed database error after sudden breaking change in the SQLite JDBC driver. Thanks, Bonn2, for the bug report!
- Fixed doors not being toggled when their powerblock is activated by placing a redstone block next to it either directly or using a piston. Thanks, zioforcella, for the bug report!

Alpha 0.1.8.47
- Fix NMS code broken on recent builds of Spigot (and forks). Thanks, SlimeDog, for the bug report!