@@ -1,4 +1,5 @@
 Alpha 0.1.8.54
+- Add support for Minecraft 1.21.1. Thanks, Bloody_Mind, for the heads-up!
 - Register missing commands. Thanks, oldmanbash, for the bug report!
 
 Alpha 0.1.8.53
